# bioguesser-v2

./: .gitignore  README.md  main.py  pyproject.toml  railway.toml
admin/: db.py  dbconnection.py  index.html  server.py  setup_staging.py
backend/: README.md  clear_guests.py  debug_profile.py  delete_temp_users.sql  requirements.txt  test_game_service.py  test_profile.py  test_profile2.py  test_ws.py
backend/animal/: README.md  models.py  serializer.py  urls.py  views.py
backend/animal/migrations/: 0001_initial.py  0002_alter_animal_options_and_more.py
backend/authentication/: README.md  admin.py  authentication.py  middleware.py  models.py  serializers.py  services.py  tests_guest.py  tests_security.py  throttling.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_rename_is_permanent_user_is_guest_alter_user_email.py  0003_alter_user_auth_provider.py  0004_user_last_active_at_user_idx_users_last_active.py
backend/backend/: asgi.py  settings.py  throttling.py  urls.py
backend/bioExplorer/: README.md  apps.py  urls.py  views.py
backend/game/: README.md  models.py  services.py  urls.py  views.py
backend/game/migrations/: 0001_initial.py  0002_guess.py  0003_alter_room_host_multiplayergame.py  (+1 more)
backend/multiplayer/: README.md  apps.py  consumers.py  routing.py
backend/userprofile/: README.md  models.py
database/: create_db.pgsql
docs/: API.md  DATABASE.md
extraction/: README.md  animals.txt  docker-compose.yml  ingest_Data.py  pyproject.toml  test_ingest.py
frontend/frontend/: README.md  package-lock.json  package.json
frontend/frontend/src/: App.jsx  (+2 more)
(+13 files in other folders)
