[project]
name = "extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "google-genai>=1.61.0",
    "psycopg[binary]>=3.3.2",
    "requests>=2.32.5",
]
